# panda-dock

./: CMakeLists.txt  README.md  appscrollarea.cpp  appscrollarea.h  main.cpp  mainpanel.cpp  mainpanel.h  mainwindow.cpp  mainwindow.h  panda-dock.pro  resources.qrc
debian/: changelog  control  copyright  rules
frame/: dragwidget.cpp  dragwidget.h  frame.pro  mainpanel.cpp  mainpanel.h  mainwindow.cpp  mainwindow.h
frame/controller/: appwindowmanager.cpp  appwindowmanager.h  dockitemmanager.cpp  dockitemmanager.h  docksettings.cpp  docksettings.h  pluginsmanager.cpp  pluginsmanager.h
frame/item/: appitem.cpp  appitem.h  dockitem.cpp  dockitem.h  launcheritem.cpp  launcheritem.h  pluginitem.cpp  pluginitem.h  showdesktopitem.h
frame/utils/: dockpopupwindow.cpp  dockpopupwindow.h  imageutil.h  pluginloader.cpp  pluginloader.h  utils.h
interfaces/: pluginproxyinterface.h  pluginsiteminterface.h
item/: appitem.cpp  appitem.h  blurwindow.cpp  blurwindow.h  dockitem.cpp  dockitem.h  highlighteffect.cpp  highlighteffect.h  launcheritem.cpp  launcheritem.h  showdesktopitem.cpp  showdesktopitem.h  trashitem.cpp  trashitem.h
plugins/: plugins.pro
plugins/datetime/: datetime.pro  datetimeplugin.cpp  datetimeplugin.h
plugins/volume/: volume.pro  volumeplugin.cpp  volumeplugin.h  volumewidget.cpp  volumewidget.h
src/: appscrollarea.cpp  mainpanel.cpp  mainpanel.h  mainwindow.cpp  mainwindow.h  resources.qrc  src.pro
src/components/: hoverhighlighteffect.cpp
src/controller/: appwindowmanager.cpp  dockitemmanager.cpp  dockitemmanager.h  docksettings.cpp  docksettings.h
src/item/: appitem.cpp  appitem.h  blurwindow.h  dockitem.cpp  dockitem.h  launcheritem.cpp  trashitem.cpp  trashitem.h
src/utils/: imagefactory.cpp  imageutil.cpp  themeappicon.cpp  themeappicon.h
src/xcb/: xcbmisc.cpp  xcbmisc.h
utils/: apprunthread.cpp  apprunthread.h  appwindowmanager.cpp  appwindowmanager.h  desktopproperties.cpp  desktopproperties.h  dockitemmanager.cpp  dockitemmanager.h  docksettings.cpp  docksettings.h  eventmonitor.cpp  eventmonitor.h  utils.h  xcbmisc.cpp  xcbmisc.h
